Fixed build on java 11 and added docker-compose

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,8 +2,8 @@ mydb = {
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
     databaseName = "test"
-    user = "postgres"
-    password = ""
+    user = "admin"
+    password = "admin"
   }
   numThreads = 1
 }
