Updated slick to 3.3.1, group delete in import, connection pool

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,5 @@
 mydb = {
+  connectionPool = "HikariCP" //use HikariCP for our connection pool
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
     databaseName = "test"
