--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,7 +2,7 @@ mydb = {
   connectionPool = "HikariCP" //use HikariCP for our connection pool
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
-    databaseName = "test"
+    databaseName = "test1"
     user = "admin"
     password = "admin"
   }
