--- a/desktop/src/main/resources/application.conf
+++ b/desktop/src/main/resources/application.conf
@@ -2,7 +2,7 @@ mydb = {
   connectionPool = "HikariCP" //use HikariCP for our connection pool
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
-    databaseName = "test1"
+    databaseName = "poi"
     user = "admin"
     password = "admin"
   }
